--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Cart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Cart.cshtml
@@ -1,9 +1,6 @@
 ﻿@model ShoppingCartModel
-
-@using SmartStore.Core.Domain.Orders
 @using SmartStore.Web.Models.Checkout
 @using SmartStore.Web.Models.ShoppingCart;
-
 @{
     Layout = "_Layout";
     Html.AddBodyCssClass("order-summary-page");
@@ -11,7 +8,7 @@
     Html.RenderAction("CheckoutProgress", "Checkout", new { step = CheckoutProgressStep.Cart });
 }
 
-<div class="page shopping-cart-page">
+<div class="page shopping-cart-page mt-4">
     <div class="page-title">
         <h1>@T("ShoppingCart")</h1>
     </div>
